--- a/reporters/playwright/package.json
+++ b/reporters/playwright/package.json
@@ -23,6 +23,7 @@
   "scripts": {
     "build": "rm -rf dist && tsc",
     "dev": "tsx watch src/index.ts",
+    "prepare": "rm -rf dist && tsc",
     "test": "vitest"
   },
   "dependencies": {
