--- a/api/package.json
+++ b/api/package.json
@@ -10,8 +10,12 @@
   "type": "module",
   "exports": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build": "rm -rf dist && tsc"
+    "build": "rm -rf dist && tsc",
+    "prepare": "rm -rf dist && tsc"
   },
   "dependencies": {
     "zod": "^3.21.4"
