--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,28 @@
+**/*.log
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/pnpm-debug.log*
+**/.DS_Store
+**/.vscode
+**/.idea
+**/.DS_Store
+**/*.suo
+**/*.ntvs*
+**/*.njsproj
+**/*.sln
+**/*.sw?
 **/generated
 **/node_modules
 **/playwright-report
 **/test-results
 
 .env
+.git
+.gitignore
 cspell.yaml
 data
+docker-compose.yml
 playwright.config.ts
 reporters
 tests
